--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,5 +1,5 @@
 <section class="cart-show">
-
+<% if !enhanced_cart.empty? %>
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
@@ -48,5 +48,7 @@
       <% end %>
     </div>
   </div>
-
+<% else %>
+<%= link_to 'Your Cart Is Empty. Click to go back to the homepage.', {controller: 'products'} %>
+<% end %>
 </section>
