--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -54,7 +54,7 @@ main section.categories-show {
         top: 0;
         left: 0px;
         padding: 10px;
-        background-color: #f49580;
+        background-color: rgb(213, 133, 133);
         border-top-right-radius: 4px;
         border-bottom-right-radius: 20px;
         color: white;
