impement registration and login

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -4,7 +4,7 @@
     <li class="list-group-item">Your product count is <%= @product_count %> </li>
         <li class="list-group-item"> <%= link_to 'Product Count', controller: 'admin/products' %></li>
     <li class="list-group-item">Your category count is <%= @category_count %> </li>
-      <li class="list-group-item"> <%= link_to 'Category Count', controller: 'admin/products' %></li>
+      <li class="list-group-item"> <%= link_to 'Category Count', controller: 'admin/categories' %></li>
 
     </ul>
 </div>
