--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,14 @@
 <body>
 
   <%= render 'layouts/top_nav' %>
+  <% if current_user %>
+  Signed in as <%= current_user.email %> | <%= link_to "Logout", '/logout' %>
+<% else %>
+  <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+<% end %>
 
-  <main class="container">
+<main class="container">
     <%= yield %>
   </main>
-
-  <%= yield :end_of_body %>
 </body>
 </html>
