fix order bug and edit readme

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -20,7 +20,7 @@
       </thead>
       <tbody>
          <% @products.each_with_index do |item, index| %>
-          <%= render 'item', product: item, quantity: @line_items[index].quantity.to_i %>
+          <%= render 'item', product: item, quantity: @products[index].quantity.to_i %>
         <% end %>
       </tbody>
       <tfoot>
